geometry dialog working nicely

--- a/client/xblock_header.html
+++ b/client/xblock_header.html
@@ -65,7 +65,8 @@ pre.code{
  * licensing@sencha.com
  * http://www.sencha.com/license
  */
-Ext.BLANK_IMAGE_URL = '../../resources/images/default/s.gif';
+//Ext.BLANK_IMAGE_URL = '../../resources/images/default/s.gif';
+Ext.BLANK_IMAGE_URL = '../../static/geonode/externals/ext/resources/images/default/s.gif';
 
 Ext.example = function(){
     var msgCt;
