--- a/client/embed.html
+++ b/client/embed.html
@@ -69,7 +69,7 @@ var CLICK_CONTROL = OpenLayers.Class(OpenLayers.Control, {
         markers[currentQuestion.id] = new OpenLayers.Marker(lonlat,icon);
         markerLayer.addMarker(markers[currentQuestion.id]);
 
-        MESSAGING.getInstance().send(
+        window.MESSAGING.getInstance().send(
             new Message("point_response",
                 {
                     point: {lon:point.x, lat:point.y},
@@ -161,7 +161,7 @@ Ext.onReady(function() {
 
     //********************************************* XBLOCK RELATED CODE ********************************************
     //useful for debugging...
-    MESSAGING.getInstance().registerHandler("info", function(m) { alert("INFO: the slave code received this 'info' message: "+m.getMessage()); });
+    window.MESSAGING.getInstance().registerHandler("info", function(m) { alert("INFO: the slave code received this 'info' message: "+m.getMessage()); });
 
     app.on("ready", function() {
 
@@ -172,7 +172,7 @@ Ext.onReady(function() {
                 fillOpacity: 0.3
             })
         });
-        var polylineLayer = new OpenLayers.Layer.Vector("worldmap-polyline", {
+        polylineLayer = new OpenLayers.Layer.Vector("worldmap-polyline", {
             styleMap: new OpenLayers.StyleMap({
                 strokeColor: "#000000",
                 strokeOpacity: 1.0,
@@ -190,7 +190,7 @@ Ext.onReady(function() {
                            polygon.push({lon: point.x, lat: point.y});
                        }
 
-                       MESSAGING.getInstance().send(
+                       window.MESSAGING.getInstance().send(
                            new Message("polygon_response",
                                {
                                    polygon: polygon,
@@ -230,7 +230,7 @@ Ext.onReady(function() {
                            polyline.push({lon: point.x, lat: point.y});
                        }
 
-                       MESSAGING.getInstance().send(
+                       window.MESSAGING.getInstance().send(
                            new Message("polyline_response",
                                {
                                    polyline: polyline,
@@ -263,25 +263,25 @@ Ext.onReady(function() {
 
         app.mapPanel.map.events.register("moveend", app.mapPanel, function(){
             // calculate lat/lon
-            MESSAGING.getInstance().send(new Message("moveend",{center: transformToLonLat(app.mapPanel.map.getCenter()),zoomLevel:app.mapPanel.map.getZoom()}));
+            window.MESSAGING.getInstance().send(new Message("moveend",{center: transformToLonLat(app.mapPanel.map.getCenter()),zoomLevel:app.mapPanel.map.getZoom()}));
         });
 
         app.mapPanel.map.events.register("zoomend", app.mapPanel.map, function(){
-            MESSAGING.getInstance().send(new Message("zoomend", app.mapPanel.map.getZoom()));
+            window.MESSAGING.getInstance().send(new Message("zoomend", app.mapPanel.map.getZoom()));
         });
 
         app.mapPanel.map.events.register("changelayer", app.mapPanel.map, function(e) {
-            MESSAGING.getInstance().send(new Message("changelayer", {name: e.layer.name, id:e.layer.id, visibility:e.layer.visibility,opacity:e.layer.opacity, legendData: getLayerLegendInfo(app.config.map.layers, e.layer)}));
+            window.MESSAGING.getInstance().send(new Message("changelayer", {name: e.layer.name, id:e.layer.id, visibility:e.layer.visibility,opacity:e.layer.opacity, legendData: getLayerLegendInfo(app.config.map.layers, e.layer)}));
         });
 
-        MESSAGING.getInstance().registerHandler("setZoomLevel", function(m) { app.mapPanel.map.zoomTo(m.getMessage()); });
-        MESSAGING.getInstance().registerHandler("setCenter",function(m) {
+        window.MESSAGING.getInstance().registerHandler("setZoomLevel", function(m) { app.mapPanel.map.zoomTo(m.getMessage()); });
+        window.MESSAGING.getInstance().registerHandler("setCenter",function(m) {
             var data = m.getMessage();
             //Ext.example.msg("Info","setCenter: "+data.centerLat+","+data.centerLon+"   zoom="+data.zoomLevel);
             var pt = transformToXY({lon:data.centerLon,lat:data.centerLat});
             app.mapPanel.map.setCenter([pt.x, pt.y],data.zoomLevel,false,false);
         });
-        MESSAGING.getInstance().registerHandler("setLayers",function(m) {
+        window.MESSAGING.getInstance().registerHandler("setLayers",function(m) {
             var data = JSON.parse(m.getMessage());
             for(var id in data){
                var layer = app.mapPanel.map.getLayer(id);
@@ -303,23 +303,26 @@ Ext.onReady(function() {
         app.mapPanel.map.addControl(polygonControl);
         app.mapPanel.map.addControl(polylineControl);
 
-        MESSAGING.getInstance().registerHandler("reset-answer-tool", function(m) {
-           var id = app.mapPanel.map.id+"_OpenLayers_ViewPort";
-           console.log("reset-answer-tool for: "+id);
-           document.getElementById(id).style.cursor = "default";
+        window.MESSAGING.getInstance().registerHandler("reset-answer-tool", function(m) {
+           $('.olMapViewport').css('cursor',"default");
+//           if( document.getElementById(id) != undefined ) {
+//               document.getElementById(id).style.cursor = "default";
+//           }
            markerControl.deactivate();
            polygonControl.deactivate();
            polylineControl.deactivate();
            currentQuestion = null;
         });
 
-        MESSAGING.getInstance().registerHandler("set-answer-tool", function(e) {
+        window.MESSAGING.getInstance().registerHandler("set-answer-tool", function(e) {
 
             var message = JSON.parse(e.message);
             currentQuestion = message;
 
             //TODO: fix url - make relative
-            document.getElementById(app.mapPanel.map.id+"_OpenLayers_ViewPort").style.cursor = "url(http://robertlight.com/tmp/"+currentQuestion.type+"Cursor.png) 16 16, auto";
+            //should use   $('.olMapViewport').style.cursor = "url(http://robertlight.com/tmp/"+currentQuestion.type+"Cursor.png) 16 16, auto";
+            $('.olMapViewport').css('cursor', "url(http://robertlight.com/tmp/"+currentQuestion.type+"Cursor.png) 16 16, auto");
+            //document.getElementById(app.mapPanel.map.id+"_OpenLayers_ViewPort").style.cursor = "url(http://robertlight.com/tmp/"+currentQuestion.type+"Cursor.png) 16 16, auto";
             if( currentQuestion.type == 'point' ) {
                Ext.example.msg("Info","{% trans 'Click the map at the location requested' %}" );
                markerControl.activate();
@@ -338,7 +341,7 @@ Ext.onReady(function() {
 
         });
 
-        MESSAGING.getInstance().registerHandler("flash-polygon", function(e) {
+        window.MESSAGING.getInstance().registerHandler("flash-polygon", function(e) {
             var data = JSON.parse(e.message);
             var features = [];
             var bounds = null;
@@ -383,7 +386,27 @@ Ext.onReady(function() {
 
         });
 
-        MESSAGING.getInstance().registerHandler("highlight-layer",function(m) {
+        window.MESSAGING.getInstance().registerHandler("reset-highlights",function(m) {
+            try {
+                polygonLayer.destroyFeatures();
+            } catch(e) {}
+            try {
+                markerLayer.destroyFeatures();
+            } catch(e) {}
+            try {
+                polylineLayer.destroyFeatures();
+            } catch(e) {}
+            try {
+                markerLayer.clearMarkers();
+            } catch(e) {}
+//            try {
+//                for( var i in markers ) {
+//                    markerLayer.removeMarker(markers[i]);
+//                }
+//            } catch (e) {}
+        });
+
+        window.MESSAGING.getInstance().registerHandler("highlight-layer",function(m) {
             var data = JSON.parse(m.getMessage());
            var layer = app.mapPanel.map.getLayer(data['layer']);
            var duration = data['duration'];
@@ -404,7 +427,7 @@ Ext.onReady(function() {
            }
         });
 
-        MESSAGING.getInstance().registerHandler("highlight-geometry", function(e) {
+        window.MESSAGING.getInstance().registerHandler("highlight-geometry", function(e) {
             var data = JSON.parse(e.message);
             var type = data['type'];
             var duration = data['duration']
@@ -432,10 +455,11 @@ Ext.onReady(function() {
                 feature.state = OpenLayers.State.INSERT;
                 bounds = ring.getBounds();
                 features.push(feature);
-                app.mapPanel.map.setCenter(
-                        [center.x, center.y],
-                        Math.min(15, relativeZoom + app.mapPanel.map.getZoomForExtent( bounds, false))
-                );
+
+                var factor = Math.min(15, relativeZoom + app.mapPanel.map.getZoomForExtent( bounds, false));
+                console.log("zooming in to ("+center.x+","+center.y+") factor="+factor);
+                app.mapPanel.map.setCenter( [center.x, center.y], factor);
+
                 polygonLayer.addFeatures(features);
                 polygonLayer.redraw();
                 if( duration != undefined && duration > 0 ) {
@@ -448,7 +472,7 @@ Ext.onReady(function() {
                // app.mapPanel.map
                 var size = new OpenLayers.Size(21,25);
                 var offset = new OpenLayers.Pixel(-size.w/2, -size.h);
-                var xy = transformToXY(data);
+                var xy = transformToXY(data['points'][0]);
                 var icon = new OpenLayers.Icon('http://www.openlayers.org/dev/img/marker.png',size,offset);
                 app.mapPanel.map.setCenter( [xy.x, xy.y], 11+relativeZoom);
                 marker = new OpenLayers.Marker({lon:xy.x,lat:xy.y},icon);
@@ -486,11 +510,13 @@ Ext.onReady(function() {
 
         });
 
-        MESSAGING.getInstance().send(new Message("portalReady", {}));
+        console.log("sending portalReady to master from embed.html at end of app.on('ready') processing");
+        window.MESSAGING.getInstance().send(new Message("portalReady", {}));
 
         //**************************************** END - XBLOCK RELATED CODE ****************************************
     });
 
+$( document).ready(function() { console.log("jquery .ready() ran from slave code.")});
 
 {% endautoescape %}
 });
