--- a/worldmap/static/html/worldmap.html
+++ b/worldmap/static/html/worldmap.html
@@ -1,33 +1,37 @@
 <div class="worldmap_block">
 <p>
-  <table border="0" cellpadding="0" cellspacing="0">
+ <table border="0" cellpadding="0" cellspacing="0">
     <tr>
-        <td>&nbsp;</td>
-        <td><div class="sliders-top"/></td>
-        <td>&nbsp;</td>
-        <td width='*' rowspan="3" valign="top">
+        <td>
+          <table border="0" cellpadding="0" cellspacing="0">
+            <tr>
+                <td class="sliders-left" rowspan="3">&nbsp;</td>
+                <td><div class="sliders-top"/></td>
+              <td class="sliders-right" rowspan="3">&nbsp;</td>
+            </tr>
+            <tr>
+              <td>
+                <iframe class='frame' id='worldmap_{uniqueId}'
+                 worldmapUrl="{self.url}"
+                 baseLayer="{self.baseLayer}"
+                 frameborder='0' width={self.width} height={self.height}
+                 debug="{self.debug}"
+                ></iframe>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top"><div class="sliders-bottom"/></td>
+            </tr>
+          </table>
+        </td>
+        <td>
           <div class="layerControls"></div>
           <div class="auxArea"></div>
         </td>
-
     </tr>
-    <tr>
-      <td class="sliders-left" />
-      <td>
-        <iframe class='frame' id='worldmap_{self.scope_ids.usage_id}'
-         src="{self.url}"
-         frameborder='0' width={self.width} height={self.height}
-         debug="{self.debug}"
-        ></iframe>
-      </td>
-      <td class="sliders-right"/>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td><div class="sliders-bottom"/></td>
-    </tr>
-
-  </table><br/>
+ </table>
+<br/>
   <textarea class="debugInfo"></textarea>
 </p>
 </div>
+
