before adding grade publishing

--- a/worldmap/static/html/worldmap.html
+++ b/worldmap/static/html/worldmap.html
@@ -24,7 +24,7 @@
             </tr>
           </table>
         </td>
-        <td>
+        <td style="vertical-align:top;">
           <div class="layerControls"></div>
           <div class="auxArea"></div>
         </td>
