--- a/worldmap/static/html/worldmap.html
+++ b/worldmap/static/html/worldmap.html
@@ -2,6 +2,11 @@
 <p>
  <table border="0" cellpadding="0" cellspacing="0">
     <tr>
+        <td colspan="2">
+            <div class="prose-area"/>
+        </td>
+    </tr>
+    <tr>
         <td>
           <table border="0" cellpadding="0" cellspacing="0">
             <tr>
@@ -23,10 +28,11 @@
               <td valign="top"><div class="sliders-bottom"/></td>
             </tr>
           </table>
-        </td>
-        <td style="vertical-align:top;">
           <div class="layerControls"></div>
-          <div class="auxArea"></div>
+        </td>
+        <td style="vertical-align:top; padding-left:10px">
+          <!--<div class="prose-area"/>-->
+          <div class="auxArea"/>
         </td>
     </tr>
  </table>
