--- a/client/embed.html
+++ b/client/embed.html
@@ -60,7 +60,7 @@ var CLICK_CONTROL = OpenLayers.Class(OpenLayers.Control, {
 
         var size = new OpenLayers.Size(21,25);
         var offset = new OpenLayers.Pixel(-size.w/2, -size.h);
-        var icon = new OpenLayers.Icon('http://www.openlayers.org/dev/img/marker.png',size,offset);
+        var icon = new OpenLayers.Icon('http://robertlight.com/tmp/marker.png',size,offset);
         icon.imageDiv.firstChild.setAttribute("style","background-color:"+currentQuestion.color);
 
         if( markers[currentQuestion.id] ) {
@@ -490,7 +490,7 @@ Ext.onReady(function() {
                 var size = new OpenLayers.Size(21,25);
                 var offset = new OpenLayers.Pixel(-size.w/2, -size.h);
                 var xy = transformToXY(data['points'][0]);
-                var icon = new OpenLayers.Icon('http://www.openlayers.org/dev/img/marker.png',size,offset);
+                var icon = new OpenLayers.Icon('http://robertlight.com/tmp/marker.png',size,offset);
                 app.mapPanel.map.setCenter( [xy.x, xy.y], 11+relativeZoom);
                 marker = new OpenLayers.Marker({lon:xy.x,lat:xy.y},icon);
                 markerLayer.addMarker(marker);
