--- a/client/embed.html
+++ b/client/embed.html
@@ -506,13 +506,13 @@ Ext.onReady(function() {
                 }
 
                 var line = new OpenLayers.Geometry.LineString(points);
-                var center = line.getCentroid();
+                //var center = line.getCentroid();
                 var bounds = line.getBounds();
                 var feature = new OpenLayers.Feature.Vector( line, {}, { strokeColor: '#FF0000', strokeWidth: 4, strokeOpacity: 1.0});
                 feature.state = OpenLayers.State.INSERT;
                 features.push(feature);
                 app.mapPanel.map.setCenter(
-                        [center.x, center.y],
+                        bounds.getCenterLonLat(),
                         Math.min(15, relativeZoom + app.mapPanel.map.getZoomForExtent( bounds, false))
                 );
                 polygonLayer.addFeatures(features);
