--- a/client/xblock_header.html
+++ b/client/xblock_header.html
@@ -68,6 +68,8 @@ pre.code{
 //Ext.BLANK_IMAGE_URL = '../../resources/images/default/s.gif';
 Ext.BLANK_IMAGE_URL = '../../static/geonode/externals/ext/resources/images/default/s.gif';
 
+// This is utilized in xblocktools.js to put up info boxes within the worldmap frame.
+// We should be able to put this code in a neater place (perhaps in xblocktools.js?
 Ext.example = function(){
     var msgCt;
 
